# xifu_cluster_sim

./: .gitignore  README.md  pyproject.toml
src/.ipynb_checkpoints/: Full_Sim_Demo-checkpoint.ipynb  Full_Sim_Different_Pointings-checkpoint.ipynb  Plot_cluster_map-checkpoint.ipynb  SIXTE_Obs_multiproc-checkpoint.bash  SIXTE_Obs_multiproc-checkpoint.py  Test_Alt_Photon_List-checkpoint.ipynb  bashfile_0-checkpoint.sh  binning-checkpoint.py  cluster_cube-checkpoint.py  cluster_sim_functions-checkpoint.ipynb  events_management-checkpoint.py  launch_pointing_nuwa-checkpoint.py  make_spectra_functions-checkpoint.ipynb  mosaic-checkpoint.py  photon_list-checkpoint.py  run-checkpoint.sh  run_sixte-checkpoint.py  spectra-checkpoint.py  spectral_fitting-checkpoint.py  spectral_fitting_functions-checkpoint.ipynb  spectral_fitting_functions_multiproc-checkpoint.ipynb  xpsec_log-checkpoint.txt
src/xifu_cluster_sim/: __init__.py  binning.py  cluster_cube.py  events_management.py  grid.py  launch_pointing_nuwa.py  mosaic.py  photon_list.py  spectral_fitting.py  turbulence.py  xifu_config.py
src/xifu_cluster_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xifu_cluster_sim/.duckversions/: cluster_cube-20260107142655.266.py  cluster_cube-20260107145847.957.py  mosaic-20260108100812.099.py  spectral_fitting-20260107155524.384.py  spectral_fitting-20260107155559.394.py  spectral_fitting-20260126142043.111.py  spectral_fitting-20260126142345.850.py  spectral_fitting-20260126143550.547.py  spectral_fitting-20260126144912.808.py  spectral_fitting-20260126150107.733.py  (+1 more)
(+6 files in other folders)
