[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xifu_cluster_sim"
version = "0.1.0"
description = "A modular instrument simulation package"
authors = [{ name = "Alexei Molin", email = "amolin@irap.omp.eu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jax"
]

[tool.setuptools.packages.find]
where = ["src"]
